force-app/main/default/objects/Empatia_Activista__c/Empatia_Activista__c.object-meta.xml
<CustomObject>
    <label>Empatia Activista</label>
    <nameField>
        <label>Empatia Activista Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empatía Activistas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>