force-app/main/default/objects/Empatia_Activista__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Citizen</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Empatía Activistas</relationshipLabel>
    <relationshipName>Empatia_Activistas</relationshipName>
    <type>Lookup</type>
</CustomField>