force-app/main/default/objects/Empatia_Activista__c/fields/Ciudadano_Emparejado__c.field-meta.xml
<CustomField>
    <fullName>Ciudadano_Emparejado__c</fullName>
    <formula>IF(  ISBLANK(Citizen__c) ,false,true)</formula>
    <label>Ciudadano Emparejado</label>
    <type>Checkbox</type>
</CustomField>