force-app/main/default/objects/Empatia_Activista__c/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <externalId>true</externalId>
    <label>DNI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>