force-app/main/default/objects/Empatia_Activista__c/fields/Estado_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Estado_Contacto__c</fullName>
    <label>Estado Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevos</fullName>
                <default>true</default>
                <label>Nuevos</label>
            </value>
            <value>
                <fullName>Sin WhatsApp</fullName>
            </value>
            <value>
                <fullName>En espera</fullName>
            </value>
            <value>
                <fullName>Contactado sin exito</fullName>
            </value>
            <value>
                <fullName>Contactado con exito</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>No volver a contactar</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>