force-app/main/default/objects/Empatia_Activista__c/fields/Etapa_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Contacto__c</fullName>
    <label>Etapa Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primer etapa de contacto</fullName>
                <default>true</default>
                <label>Primer etapa de contacto</label>
            </value>
            <value>
                <fullName>Cierre de contacto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>