force-app/main/default/objects/Empatia_Activista__c/fields/Fecha_de_Inscripcion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Inscripcion__c</fullName>
    <label>Fecha de Inscripcion</label>
    <type>DateTime</type>
</CustomField>