force-app/main/default/objects/Empatia_Activista__c/fields/Fecha_de_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_nacimiento__c</fullName>
    <description>Se usa junto con el DNI para identificar al ciudadano. Un trigger la concatena en el campo &quot;identificador_unico__c&quot;</description>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>