force-app/main/default/objects/Empatia_Activista__c/fields/Identificador_unico__c.field-meta.xml
<CustomField>
    <fullName>Identificador_unico__c</fullName>
    <description>El trigger de activista concatena dni + fecha de nacimiento en la creacion / update. El campo evita que se creen activistas duplicados.</description>
    <externalId>true</externalId>
    <label>Identificador unico</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>