force-app/main/default/objects/Empatia_Activista__c/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <label>Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>