force-app/main/default/objects/Empatia_Activista__c/validationRules/LockEmpatiaActivistaDNIEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>LockEmpatiaActivistaDNIEdit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $Profile.Name = &quot;Empatia_FM_Editor&quot;,
 ISCHANGED( DNI__c  ),
 NOT(ISBLANK(PRIORVALUE(Citizen__c )))
)</errorConditionFormula>
    <errorDisplayField>DNI__c</errorDisplayField>
    <errorMessage>No se puede Cambiar el DNI de un Activista Emparejado a un Ciudadano</errorMessage>
</ValidationRule>