force-app/main/default/objects/Empatia_Activista__c/validationRules/LockEmpatiaActivistaNameEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>LockEmpatiaActivistaNameEdit</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name = &quot;Empatia_FM_Editor&quot;, ISCHANGED(  Name   ))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>No se puede cambiar el  Registro de Activista</errorMessage>
</ValidationRule>