force-app/main/default/objects/Empatia_Activista__c/validationRules/LockEmpatiaActivistaOwnerEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>LockEmpatiaActivistaOwnerEdit</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name = &quot;Empatia_FM_Editor&quot;, ISCHANGED(  OwnerId  ))</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>No se puede cambiar el Propietario</errorMessage>
</ValidationRule>