force-app/main/default/objects/Empatia_Activista__c/listViews/Activistas.listView-meta.xml
<ListView>
    <fullName>Activistas</fullName>
    <columns>NAME</columns>
    <columns>Citizen__c</columns>
    <columns>DNI__c</columns>
    <columns>Fecha_de_nacimiento__c</columns>
    <columns>Celular__c</columns>
    <columns>Email__c</columns>
    <columns>Provincia__c</columns>
    <columns>Ciudad__c</columns>
    <columns>Fecha_de_Inscripcion__c</columns>
    <columns>Etapa_Contacto__c</columns>
    <columns>Estado_Contacto__c</columns>
    <columns>Ciudadano_Emparejado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ciudadano_Emparejado__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Activistas</label>
    <sharedTo>
        <group>Grupo_Editor_Empatia</group>
    </sharedTo>
</ListView>